Updated Home page links

--- a/index.html
+++ b/index.html
@@ -84,10 +84,8 @@ dependencies:
   - {conf: compile, org: commons-lang, name: commons-lang, rev: "2.6", transitive: false}
 </pre></div>
 					<ul>
-						<li><a href="javascript:false">Getting Started</a></li>
-						<li><a href="javascript:false">Source Code on Github</a></li>
-						<li><a href="javascript:false">Wiki on Github</a></li>
-						<li><a href="javascript:false">Issue tracking</a></li>
+						<li><a href="https://github.com/m410/fab">Getting Started</a></li>
+						<li><a href="https://github.com/m410/fab">Source Code on Github</a></li>
 					</ul>
 			</div>
 </secion>
@@ -98,11 +96,11 @@ dependencies:
 					top of Fab(ricate). The code snippet above shows a minimal working application without views or 
 					configuration.</p>
 				<ul>
-						<li><a href="javascript:false">Getting Started</a></li>
-						<li><a href="javascript:false">Source Code on Github</a></li>
-						<li><a href="javascript:false">Controller Reference</a></li>
-						<li><a href="javascript:false">Configuration Reference</a></li>
-						<li><a href="javascript:false">Issue tracking</a></li>
+						<li><a href="https://github.com/m410/fab-arch-brzy">Getting Started</a></li>
+						<li><a href="https://github.com/m410/fab-arch-brzy">Source Code on Github</a></li>
+						<li><a href="https://github.com/m410/brzy">Controller Reference</a></li>
+						<li><a href="https://github.com/m410/fab-arch-brzy">Configuration Reference</a></li>
+						<li><a href="https://github.com/m410/brzy/issues">Issue tracking</a></li>
 					</ul>
           <ul>
 							<li><a href="javascript:false">Sample Applications</a><br>
@@ -116,19 +114,18 @@ dependencies:
 		<h2>Calista</h2>
 				<p>Calista is a client api for Cassandra written in Scala.</p>
 							<ul>
-						<li><a href="javascript:false">Source Code on Github</a></li>
-						<li><a href="javascript:false">Wiki</a></li>
-						<li><a href="javascript:false">Issue tracking</a></li>
+						<li><a href="https://github.com/m410/calista">Source Code on Github</a></li>
+						<li><a href="https://github.com/m410/calista/issues">Issue tracking</a></li>
 					</ul>
 				<h3>Other projects</h3>
 							<ul>
-						<li><a href="javascript:false">Scala Library Archetype</a>
+						<li><a href="https://github.com/m410/fab-arch-scala-lib">Scala Library Archetype</a>
 							<p>Like the Brzy webapp, this is an Fab(ricate) archetype to build a simple scala jar.</p>
 						</li>	
-						<li><a href="javascript:false">Scala Bean Validation</a><br>
+						<li><a href="https://github.com/m410/validator">Scala Bean Validation</a><br>
 							<p>A validation api built with the java bean api used to validate scala bean classes.</p>
 						</li>
-						<li><a href="javascript:false">Scala Bean Wrapper</a><br>
+						<li><a href="https://github.com/m410/beanwrap">Scala Bean Wrapper</a><br>
 							<p>Similar to the Spring bean wrapper, it's used to create scala classes from a map of properties.</p>
 						</li>
 					</ul>
