updated resource directory name

--- a/features.html
+++ b/features.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>m410: Java 8 Web Framework</title>
     <meta name="viewport" content="width=device-width">
-    <link type="text/css" rel="stylesheet" href="_/css/resets.css">
-    <link type="text/css" rel="stylesheet" href="_/css/layout.css">
-    <link type="text/css" rel="stylesheet" href="_/css/typography.css">
-    <link type="text/css" rel="stylesheet" href="_/css/style.css">
-    <link type="text/css" rel="stylesheet" href="_/css/shCoreDefault.css">
-    <!--[if lt IE 9]> <script src="_/js/vendor/html5shiv.js"></script> <![endif]-->
+    <link type="text/css" rel="stylesheet" href="resources/css/resets.css">
+    <link type="text/css" rel="stylesheet" href="resources/css/layout.css">
+    <link type="text/css" rel="stylesheet" href="resources/css/typography.css">
+    <link type="text/css" rel="stylesheet" href="resources/css/style.css">
+    <link type="text/css" rel="stylesheet" href="resources/css/shCoreDefault.css">
+    <!--[if lt IE 9]> <script src="resources/js/vendor/html5shiv.js"></script> <![endif]-->
     <style>pre{border:none}</style>
 </head>
 <body>
@@ -21,7 +21,7 @@
 <div class="header-band">
     <header class="container row">
         <div class="col span_4">
-            <img class="logo" src="_/images/m410_logo.png" alt=""/>
+            <img class="logo" src="resources/images/m410_logo.png" alt=""/>
         </div>
         <div class="col span_8">
             <nav>
@@ -196,11 +196,11 @@ interface PersonEntityFactory extends EntityFactory {
     </footer>
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="_/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-<script src="_/js/vendor/respond.min.js"></script>
-<!--<script src="_/js/vendor/xregexp-min.js.css"></script>-->
-<!--<script src="_/js/vendor/shCore.js"></script>-->
-<!--<script src="_/js/vendor/shBrushJava.js"></script>-->
+<script>window.jQuery || document.write('<script src="resources/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+<script src="resources/js/vendor/respond.min.js"></script>
+<!--<script src="resources/js/vendor/xregexp-min.js.css"></script>-->
+<!--<script src="resources/js/vendor/shCore.js"></script>-->
+<!--<script src="resources/js/vendor/shBrushJava.js"></script>-->
 <!--<script type="text/javascript">XRegExp.install('natives');SyntaxHighlighter.all();</script>-->
 <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=java&lang=yaml"></script>
 <script src="https://google-code-prettify.googlecode.com/svn/trunk/src/lang-yaml.js"></script>
