--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>m410: Java 8 Web Framework</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="_/css/resets.css">
-    <link rel="stylesheet" href="_/css/layout.css">
-    <link rel="stylesheet" href="_/css/typography.css">
-    <link rel="stylesheet" href="_/css/style.css">
-    <script src="_/js/vendor/respond.min.js"></script>
-    <!--[if lt IE 9]> <script src="_/js/vendor/html5shiv.js"></script> <![endif]-->
+    <link rel="stylesheet" href="resources/css/resets.css">
+    <link rel="stylesheet" href="resources/css/layout.css">
+    <link rel="stylesheet" href="resources/css/typography.css">
+    <link rel="stylesheet" href="resources/css/style.css">
+    <script src="resources/js/vendor/respond.min.js"></script>
+    <!--[if lt IE 9]> <script src="resources/js/vendor/html5shiv.js"></script> <![endif]-->
 </head>
 <body>
 
 <div class="header-band">
     <header class="container row">
         <div class="col span_4">
-            <img class="logo" src="_/images/m410_logo.png" alt=""/>
+            <img class="logo" src="resources/images/m410_logo.png" alt=""/>
         </div>
         <div class="col span_8">
             <nav>
@@ -76,6 +76,6 @@
     </footer>
 </div>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="_/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="resources/js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 </body>
 </html>
