--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic' rel='stylesheet' type='text/css'>
-    <link type="text/css" rel="stylesheet" href="_/css/bootstrap.min.css">
-    <link type="text/css" rel="stylesheet" href="_/css/bootstrap-theme.min.css">
-    <link type="text/css" rel="stylesheet" href="_/css/shCoreDefault.css"/>
-    <link type="text/css" rel="stylesheet" href="_/css/m410-style.css">
+    <link type="text/css" rel="stylesheet" href="resources/css/bootstrap.min.css">
+    <link type="text/css" rel="stylesheet" href="resources/css/bootstrap-theme.min.css">
+    <link type="text/css" rel="stylesheet" href="resources/css/shCoreDefault.css"/>
+    <link type="text/css" rel="stylesheet" href="resources/css/m410-style.css">
 
-    <script type="text/javascript" src="_/js/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="_/js/bootstrap.min.js"></script>
-	  <script type="text/javascript" src="_/js/shCore.js"></script>
-	  <script type="text/javascript" src="_/js/shBrushJava.js"></script>
-	  <script type="text/javascript" src="_/js/shBrushYaml.js"></script>
+    <script type="text/javascript" src="resources/js/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
+	  <script type="text/javascript" src="resources/js/shCore.js"></script>
+	  <script type="text/javascript" src="resources/js/shBrushJava.js"></script>
+	  <script type="text/javascript" src="resources/js/shBrushYaml.js"></script>
 	  <script type="text/javascript">SyntaxHighlighter.all();</script>
   </head>
   <body>
