--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">m410</a>
+          <a class="navbar-brand" href="https://github.com/m410">m410</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
@@ -118,23 +118,20 @@
   <div class="panel-body">
     <pre class="brush: yaml">
 archetype:
-  version: 0.1-SHAPSHOT
   name: java-lib
-  organization: org.m410.fab
+  organization: org.m410.fabricate
+  version: 0.2-SNAPSHOT
 
 application:
   name: demo-lib
   org: org.m410.demo
-  version: "0.1"
+  version: 0.2-SNAPSHOT
   description: Sample java library
 
 dependencies:
-  - { scope: compile, org: org.apache.commons, name: commons-lang3, rev: 3.3.2 }
+- { scope: compile, org: org.apache.commons, name: commons-lang3, rev: 3.3.2 }
 
-modules:
-  - name: garden-junit
-    organization: org.m410.garden
-    version: "0.1"
+testing(org.m410.fabricate:fab-junit:0.2-SNAPSHOT):
     </pre>
   </div>
   <div class="panel-footer">Example Library configuration file: java-lib.fab.yml</div>
@@ -350,11 +347,9 @@ public final class PersonController extends Controller {
           </p>
           <ul class="list-unstyled">
             <li><a href="http://github.com/m410/" target="_blank">Project Home</a></li>
-            <li><a href="#" >Installing Fab(ricate)</a></li>
-            <li><a href="#" target="_blank">Using Fab(ricate)</a></li>
-            <li><a href="#" target="_blank">Installing Grarden Project</a></li>
-            <li><a href="#" target="_blank">Running Using Garden</a></li>
-            <li><a href="#" target="_blank">Garden Modules</a></li>
+            <li><a href="https://github.com/m410/fab" >Installing Fab(ricate)</a></li>
+            <li><a href="https://github.com/m410/fab" target="_blank">Using Fab(ricate)</a></li>
+            <li><a href="https://github.com/m410/garden" target="_blank">Running Using Garden</a></li>
           </ul>
         </div>
         <div class="col-lg-6 col-md-6">
