updated landing page

--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
                 </header>
             </div>
             <div class="col-lg-4">
-                <p> This is what I do in my spare time, I write code for fun as my hobby. It’s to projects, a build tool and a web framework. After using Groovy and Scala quiet a bit over the last few years, I wanted to take some lessons learned from those
+                <p> These are two hobby projects that are proof of concepts. A build tool and a web framework. After using Node, Groovy and Scala quiet a bit over the last few years, I wanted to take some lessons learned from those
                     languages and frameworks to write a simple light weight framework with java 8’s new features.
                 </p>
                 <p>
-                    So, A goal from the start was to use one configuration file, which took me down a path of writing
+                    So, A goal from the start was to use one configuration file, which took me down a path of writing my own
                 </p>
             </div>
             <div class="col-lg-4">
-                <p> my own build tool. It’s done in yaml, a more readable and compact format than xml, yet still declarative instead of using a groovy or ruby dsl. Even the title of the file tells you what kind of project is in that directory.
+                <p> build tool. It’s done in yaml, a more readable and compact format than xml, yet still declarative instead of using a groovy or ruby dsl. Even the title of the file tells you what kind of project is in that directory.
                 </p>
                 <p>
-                    Over the years java has become very dependent on annotations and refection so you could say the approach I’ve taken with this framework could be called compiler first or may
+                    Over the years java has become very dependent on annotations and refection so you could say the approach I’ve taken with this framework could be called compiler first or maybe retro development.
                 </p>
             </div>
             <div class="col-lg-4">
-                <p> retro development. The compiler is your first defense again bugs, but java libraries and project seem to have become very comfortable with the annotation first programming. It’s not necessarily bad, but why not take advantage of the compiler
+                <p> The compiler is your first defense again bugs, but java libraries and project seem to have become very comfortable with the annotation first programming. It’s not necessarily bad, but why not take advantage of the compiler
                     and catch bugs earlier in the development process. Fewer annotations means less refection and better performance as well. And thanks to some new features of java8 can can be much easier now.
                 </p>
 
